--- a/string.html
+++ b/string.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
-    <title>
-        String
-    </title>
+    <head>
+        <title>Strings concept</title>
+    </head>
 
     <body>
         <h1>hello</h1>
