--- a/dom.html
+++ b/dom.html
@@ -8,17 +8,17 @@
 
     <body>
 
-        <div>
+        <div id="d1">
 
             <h1 id="ah2">Hello</h1>
+            <ul>List
+                <li>Item1</li>
+                <li>Item1</li>
+                <li>Item1</li>
+            </ul>
 
         </div>
-        <div>
-            <p class="c1">Hello namastey 😀 </p>
-            <h4 class="c1">😀😀😀😀😀😀😀😀</h4>
-        </div>
-        <h1 id="ah1">Document Object Model</h1>
-
+     
 
         <script src="dom.js"></script>
     </body>
