--- a/tictac.html
+++ b/tictac.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Tic-Tac-Toe</h1>
+    <div class="msgwinner">
+        <p id="msg">Winner</p>
+        <button id="new">New Game</button>
+    </div>
     <div class="container">
         <div class="game">
             <button class="box"></button>
@@ -21,6 +25,12 @@
             <button class="box"></button>
         </div>
     </div>
+    <!-- <br> -->
+    <button id="reset">Reset</button>
+
+
+
+
     <script src="tictac.js"></script>
 </body>
 </html>
